c4prj1_deck/grade.txt
Grading at Tue Sep 29 23:09:24 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:23:17: error: ‘temp’ is used uninitialized in this function [-Werror=uninitialized]
   temp -> value = 0;
                 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
